tests/errors/proc-already-defined.ja
procedure foo()
    skip

procedure foo()
    skip

procedure main()
    skip
